intégrationd e la vidéo sur la home

--- a/src/components/styles/variable.scss
+++ b/src/components/styles/variable.scss
@@ -1,4 +1,5 @@
-$primary-color: #38383d;
-$secondary-color: #f5f5f5;
-$tertiary-color: #e66d38;
+$primary-color: #3B3446;
+$secondary-color: #5896CF;
+$tertiary-color: #E4309B;
+$fourth-color: #FAA226;
 $font-text: "Roboto";
