--- a/src/index.scss
+++ b/src/index.scss
@@ -2,3 +2,4 @@
 @import './components/styles/variable.scss';
 @import './components/styles/MixageImg.scss';
 @import './components/styles/App.scss';
+@import './components/styles/Home.scss';
