--- a/src/index.scss
+++ b/src/index.scss
@@ -3,3 +3,4 @@
 @import './components/styles/MixageImg.scss';
 @import './components/styles/App.scss';
 @import './components/styles/Home.scss';
+@import './components/styles/option.scss';
