--- a/src/components/styles/Home.scss
+++ b/src/components/styles/Home.scss
@@ -1,9 +1,12 @@
+@import "../header/header.scss";
+@import "../presentation/presentation.scss";
+
+
 .home {
-    .video-home {
-        width: 100%;
-        height: 300px;
-        overflow: hidden;
-        display: flex;
-        align-items: center;
-    }
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 60px;
 }
