--- a/src/index.scss
+++ b/src/index.scss
@@ -4,3 +4,4 @@
 @import './components/styles/App.scss';
 @import './components/styles/Home.scss';
 @import './components/styles/option.scss';
+@import './components/styles/query.scss';
