--- a/src/components/styles/option.scss
+++ b/src/components/styles/option.scss
@@ -5,18 +5,42 @@
     color: $font-color;
     margin: 25px;
 
+
+    h1 {
+        font-size: 30px;
+        margin: 15px 0px;
+    }
+
+    p {
+        width: 80%
+    }
+
+    .prixFinal {
+        text-align: end;
+        color: $tertiary-color;
+        font-size: 28px;
+
+    }
+
     .optionContainer {
         width: 90%;
         display: flex;
         flex-direction: row;
         margin: 25px;
         justify-content: space-between;
+        background-color: $secondary-color;
+        padding: 25px;
+        border-radius: 15px;
 
         .optionCard {
             display: flex;
             flex-direction: column;
             width: 30%;
 
+            select {
+                font-family: $font-text;
+                color: $secondary-color;
+            }
         }
     }
 }
