--- a/src/index.scss
+++ b/src/index.scss
@@ -3,3 +3,6 @@
 @import './components/styles/MixageImg.scss';
 @import './components/styles/App.scss';
 @import './components/styles/Home.scss';
+@import './components/styles/Navbar.scss';
+@import './components/styles/Commande.scss';
+@import './components/styles/TonTrip.scss';
