--- a/src/components/presentation/presentation.scss
+++ b/src/components/presentation/presentation.scss
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 60px;
 
     &_container {
         width: 100%;
@@ -19,10 +20,11 @@
         align-items: center;
 
         &_text {
-            width: 35%;
+            width: 39%;
             height: 100%;
             display: flex;
             flex-direction: column;
+            justify-content: space-between;
             gap: 10px;
 
             &_title {
