--- a/src/components/presentation/slider.scss
+++ b/src/components/presentation/slider.scss
@@ -24,3 +24,50 @@
         }
     }
 }
+
+.slider3 {
+    width: 100%;
+
+    &_carousel {
+        width: 700px;
+        height: 250px;
+
+        .react-multiple-carousel__arrow {
+            background-color: $fourth-color;
+            width: 50px;
+            height: 50px;
+        }
+
+        .react-multiple-carousel__arrow {
+            display: none;
+        }
+
+        &_box {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            height: 250px;
+
+            &_img {
+                width: 65%;
+                height: 250px;
+                object-fit: cover;
+                // object-position: top;
+                border-radius: 15px;
+            }
+
+            &_quote {
+                width: 30%;
+                font-size: 28px;
+                font-family: $font-text;
+                font-weight: 700;
+                color: $fourth-color;
+            }
+        }
+
+        .react-multi-carousel-item {
+            opacity: 95%;
+        }
+    }
+}
