--- a/src/index.scss
+++ b/src/index.scss
@@ -7,4 +7,4 @@
 @import './components/styles/Commande.scss';
 @import './components/styles/TonTrip.scss';
 @import './components/styles/option.scss';
-
+@import "./components/footer/footer.scss";
