--- a/src/components/presentation/presentation.scss
+++ b/src/components/presentation/presentation.scss
@@ -1,18 +1,18 @@
 @import "./slider.scss";
 
 .presentation {
-    width: 95%;
+    width: 92%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 60px;
+    gap: 80px;
 
     &_container {
         width: 100%;
         height: 280px;
         display: flex;
         flex-direction: row;
-        background-color: $tertiary-color;
+        background-color: $fourth-color;
         justify-content: space-between;
         border-radius: 15px;
         border-style: hidden;
@@ -30,27 +30,32 @@
             &_title {
                 font-size: 38px;
                 font-family: $font-text;
+                color: $primary-color;
             }
 
             &_speech {
                 width: 100%;
                 font-family: $font-text;
                 font-size: 22px;
+                color: $primary-color;
             }
 
             &_btn {
+                display: flex;
+                justify-content: center;
+                align-items: center;
                 margin: auto;
                 width: 250px;
-                height: 50px;
+                height: 65px;
                 border-radius: 15px;
-                background-color: $secondary-color;
+                background-color: $tertiary-color;
                 font-size: 24px;
                 cursor: pointer;
                 transition: 0.3s ease-in-out;
                 border: hidden;
 
                 &:hover {
-                    background-color: $fourth-color;
+                    background-color: $secondary-color;
 
                 }
 
@@ -58,7 +63,7 @@
         }
 
         &_slider {
-            width: 60%;
+            width: 55%;
         }
     }
 }
