--- a/src/components/styles/Home.scss
+++ b/src/components/styles/Home.scss
@@ -8,5 +8,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 60px;
+    gap: 80px;
+    margin-bottom: 80px;
 }
