--- a/src/components/styles/Navbar.scss
+++ b/src/components/styles/Navbar.scss
@@ -1,23 +1,49 @@
 .nav {
     width: 100%;
     height: 100px;
-    background: rgb(250, 162, 38);
-    background: radial-gradient(circle, rgba(250, 162, 38, 1) 0%, rgba(228, 48, 155, 1) 60%, rgba(88, 150, 207, 1) 72%, rgba(59, 52, 70, 1) 80%);
+    background: radial-gradient(circle, $fourth-color 0%, $tertiary-color 60%, $secondary-color 72%, $primary-color 80%);
 
     .icons {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        align-items: center;
+
 
         .img {
             height: 100px;
-            margin-left: 20px;
+            margin-left: 10%;
         }
 
-        .link {
-            margin: 35px 90px 0 0;
-            color: $fourth-color;
-            font-family: $font-text ;
+        .navlink {
+            display: flex;
+            flex-direction: row;
+            gap: 40px;
+            width: 20%;
+
+
+            .link1 {
+                color: $fourth-color;
+                font-family: $font-text ;
+                font-size: 30px;
+
+                &:hover {
+                    color: $secondary-color;
+                    transition: 0.3s ease-in-out;
+                }
+            }
+
+            .link2 {
+                color: $fourth-color;
+                font-family: $font-text ;
+                font-size: 30px;
+
+                &:hover {
+                    color: $tertiary-color;
+                    transition: 0.3s ease-in-out;
+                }
+            }
         }
+
     }
 }
