--- a/src/components/styles/option.scss
+++ b/src/components/styles/option.scss
@@ -3,43 +3,105 @@
     display: flex;
     flex-direction: column;
     color: $font-color;
-    margin: 25px;
+    margin-bottom: 70px;
+
 
 
     h1 {
         font-size: 30px;
-        margin: 15px 0px;
+        margin: 15px;
     }
 
     p {
-        width: 80%
+        width: 80%;
+        margin: 0 15px;
+        line-height: 125%;
     }
 
-    .prixFinal {
-        text-align: end;
-        color: $tertiary-color;
-        font-size: 28px;
-
-    }
-
-    .optionContainer {
+    .contPrixFinal {
         width: 90%;
         display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        align-items: flex-end;
+
+        .prixFinal {
+            font-size: 28px;
+            width: auto;
+            padding: 10px;
+            background-color: $fourth-color;
+            border-radius: 10px;
+            margin-bottom: 35px;
+        }
+
+        span {
+            color: $fourth-color;
+            background-color: white;
+            margin: 3px;
+            padding: 3px 7px;
+            border-radius: 3px;
+        }
+
+        .btn {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 0 15px;
+            width: 250px;
+            height: 65px;
+            border-radius: 15px;
+            background-color: $tertiary-color;
+            font-size: 24px;
+            cursor: pointer;
+            transition: 0.3s ease-in-out;
+            border: hidden;
+            color: $font-color;
+
+            &:hover {
+                background-color: $secondary-color;
+
+            }
+
+        }
+    }
+
+
+
+    .optionContainer {
+        width: 95%;
+        display: flex;
         flex-direction: row;
-        margin: 25px;
-        justify-content: space-between;
-        background-color: $secondary-color;
+        justify-content: center;
         padding: 25px;
         border-radius: 15px;
+        gap: 15px;
 
         .optionCard {
             display: flex;
             flex-direction: column;
-            width: 30%;
+            padding: 10px;
+            margin: 10px;
+            border-radius: 10px;
+            background-color: $secondary-color;
+            align-items: center;
+
+            h2 {
+                font-size: 25px;
+                margin-bottom: 8px;
+            }
+
+            label {
+                margin-bottom: 5px;
+            }
 
             select {
                 font-family: $font-text;
                 color: $secondary-color;
+                width: 65%;
+                font-size: 15px;
+                border: none;
+                border-radius: 5px;
+                margin: 8px 0px;
             }
         }
     }
