--- a/src/components/styles/MixageImg.scss
+++ b/src/components/styles/MixageImg.scss
@@ -23,15 +23,25 @@
     }
 
     button {
-        border: none;
-        background-color: $secondary-color;
-        padding: 20px;
-        border-radius: 10px;
-        transition: all 0.5s ease-in-out;
-    }
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0 15px;
+        padding: 2%;
+        width: auto;
+        height: 65px;
+        border-radius: 15px;
+        background-color: $tertiary-color;
+        font-size: 24px;
+        cursor: pointer;
+        transition: 0.3s ease-in-out;
+        border: hidden;
+        color: $font-color;
 
-    button:hover {
-        transform: scale(1.2);
+        &:hover {
+            background-color: $secondary-color;
+
+        }
     }
 
 }
