--- a/src/components/styles/query.scss
+++ b/src/components/styles/query.scss
@@ -1,9 +1,10 @@
 .query {
     font-size: 40px;
     width: 100%;
+    color: white;
+    margin-top: 10px;
 
     &_return {
-        // background-color: green;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -13,18 +14,33 @@
             display: flex;
             flex-direction: row;
             justify-content: space-around;
-            margin-top: 50px;
+            align-items: center;
+            margin-top: 30px;
             width: 100%;
+            gap: 20px;
+
+
         }
 
         &_button {
             border: 0;
             padding: 0;
+            width: 100%;
             height: 100%;
-            width: 200px;
 
             .picture {
                 width: 100%;
+                overflow: hidden;
+
+                &_image {
+                    height: 200px;
+                    width: 100%;
+
+                }
+
+                &_description {
+                    font-size: 30px;
+                }
             }
         }
     }
@@ -33,13 +49,25 @@
         display: flex;
         align-items: center;
         justify-content: space-around;
-        margin-top: 50px;
+        margin-top: 30px;
         width: 100%;
         height: 100%;
 
         .picture {
             display: flex;
-            height: 300px;
+            height: 200px;
+        }
+    }
+
+    &_link {
+        display: flex;
+        justify-content: center;
+
+        &_button {
+            border: 0;
+            height: 30px;
+            width: 100px;
+            border-radius: 5px;
         }
     }
 }
