css improvment and onepage

--- a/src/components/styles/Commande.scss
+++ b/src/components/styles/Commande.scss
@@ -1,9 +1,11 @@
 p {
     color: $font-color;
+    font-size: 18px;
 }
 
 .prixBrut {
-    font-size: 28px;
+    font-size: 25px;
+    margin-left: 25px;
     width: auto;
     padding: 15px;
     background-color: $fourth-color;
