--- a/src/components/styles/option.scss
+++ b/src/components/styles/option.scss
@@ -9,12 +9,12 @@
 
     h1 {
         font-size: 30px;
-        margin: 15px;
+        margin: 25px;
     }
 
     p {
         width: 80%;
-        margin: 0 15px;
+        margin: 0 25px;
         line-height: 125%;
     }
 
@@ -92,6 +92,7 @@
 
             label {
                 margin-bottom: 5px;
+                font-size: 20px;
             }
 
             select {
