--- a/src/components/styles/query.scss
+++ b/src/components/styles/query.scss
@@ -16,9 +16,8 @@
         &_proposition {
             display: flex;
             flex-direction: row;
-            justify-content: space-between;
+            justify-content: space-around;
             align-items: center;
-            justify-content: center;
             margin-top: 30px;
             padding: 10px 15px;
             width: 100%;
@@ -34,6 +33,7 @@
             width: 100%;
             height: 100%;
             border-radius: 10px;
+            border: 3px solid $tertiary-color;
 
             .picture {
                 width: 100%;
@@ -54,17 +54,21 @@
     }
 
     .pool {
+        background-color: #D4EBFF;
         display: flex;
         align-items: center;
         justify-content: space-around;
-        margin-top: 30px;
-        width: 100%;
+        margin: 30px auto;
+        padding: 15px;
+        width: 70%;
         height: 100%;
+        border-radius: 15px;
 
         .picture {
             display: flex;
             height: 200px;
             border-radius: 10px;
+
         }
     }
 }
