--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,6 +1,8 @@
 .header {
     height: 300px;
     width: 100%;
+    border-bottom: solid 5px $tertiary-color;
+    ;
 
     &_video-home {
         width: 100%;
@@ -14,8 +16,105 @@
         width: 100%;
         text-align: center;
         position: absolute;
-        top: 170px;
+        top: 300px;
         font-size: 70px;
-        color: white;
+        color: #ffffff;
+        text-shadow: -2px 2px 0 $tertiary-color,
+            2px 2px 0 $fourth-color,
+            2px -2px 0 $fourth-color,
+            -2px -2px 0 $fourth-color;
+
+    }
+
+    *,
+    ::before,
+    ::after {
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+    }
+
+    .funky-container {
+        display: inline-block;
+        position: relative;
+        top: -100%;
+        left: 25%;
+    }
+
+    .funky-base,
+    .funky-letter {
+        font-size: 150px;
+        font-style: $font-text;
+        color: transparent;
+        font-weight: bold;
+    }
+
+    .funky-letter {
+        position: absolute;
+        top: 0;
+        left: 0;
+        -webkit-animation: funky 1.5s ease-in-out infinite;
+        animation: funky 2s ease-in-out infinite;
+        text-shadow: -1px -1px 0 #222, 1px -1px 0 #222, -1px 1px 0 #222, 1px 1px 0 #222, 4px 4px 0 rgba(0, 0, 0, 0.2);
+    }
+
+    @-webkit-keyframes funky {
+        50% {
+            transform: translateY(50px);
+        }
+    }
+
+    @keyframes funky {
+        50% {
+            transform: translateY(50px);
+        }
+    }
+
+    .fl-1 {
+        -webkit-animation-delay: -0.1s;
+        animation-delay: -0.1s;
+        color: $fourth-color;
+    }
+
+    .fl-2 {
+        -webkit-animation-delay: -0.2s;
+        animation-delay: -0.2s;
+        color: $tertiary-color;
+    }
+
+    .fl-3 {
+        -webkit-animation-delay: -0.3s;
+        animation-delay: -0.3s;
+        color: $secondary-color;
+    }
+
+    .fl-4 {
+        -webkit-animation-delay: -0.4s;
+        animation-delay: -0.4s;
+        color: $primary-color;
+    }
+
+    .fl-5 {
+        -webkit-animation-delay: -0.5s;
+        animation-delay: -0.5s;
+        color: $secondary-color;
+    }
+
+    .fl-6 {
+        -webkit-animation-delay: -0.6s;
+        animation-delay: -0.6s;
+        color: $tertiary-color;
+    }
+
+    .fl-7 {
+        -webkit-animation-delay: -0.7s;
+        animation-delay: -0.7s;
+        color: $fourth-color;
+    }
+
+    .fl-8 {
+        -webkit-animation-delay: -0.8s;
+        animation-delay: -0.8s;
+        color: #ffffff;
     }
 }
