--- a/src/components/styles/Navbar.scss
+++ b/src/components/styles/Navbar.scss
@@ -1,6 +1,7 @@
 .nav {
     width: 100%;
     height: 100px;
+    border-bottom: solid 5px $tertiary-color;
     background: radial-gradient(circle, $fourth-color 0%, $tertiary-color 60%, $secondary-color 72%, $primary-color 80%);
 
     .icons {
@@ -25,22 +26,28 @@
             .link1 {
                 color: $fourth-color;
                 font-family: $font-text ;
-                font-size: 30px;
+                font-size: 25px;
+                font-weight: 600;
+                transition: 0.3s ease-in-out;
 
                 &:hover {
                     color: $secondary-color;
-                    transition: 0.3s ease-in-out;
+
+                    transform: scale(1.4);
+
                 }
             }
 
             .link2 {
                 color: $fourth-color;
                 font-family: $font-text ;
-                font-size: 30px;
+                font-size: 25px;
+                font-weight: 600;
+                transition: 0.3s ease-in-out;
 
                 &:hover {
                     color: $tertiary-color;
-                    transition: 0.3s ease-in-out;
+                    transform: scale(1.4);
                 }
             }
         }
