tout en anglais

--- a/src/components/presentation/presentation.scss
+++ b/src/components/presentation/presentation.scss
@@ -53,6 +53,7 @@
                 cursor: pointer;
                 transition: 0.3s ease-in-out;
                 border: hidden;
+                color: $font-color;
 
                 &:hover {
                     background-color: $secondary-color;
