--- a/src/components/styles/Navbar.scss
+++ b/src/components/styles/Navbar.scss
@@ -12,8 +12,10 @@
 
 
         .img {
-            height: 100px;
+            height: 90px;
             margin-left: 10%;
+            margin-top: 5%;
+
         }
 
         .navlink {
