--- a/src/components/styles/Navbar.scss
+++ b/src/components/styles/Navbar.scss
@@ -31,6 +31,10 @@
                 font-size: 25px;
                 font-weight: 600;
                 transition: 0.3s ease-in-out;
+                text-shadow: -1px 1px 0 $tertiary-color,
+                    1px 1px 0 $primary-color,
+                    1px -1px 0 $primary-color,
+                    -1px -1px 0 $primary-color;
 
                 &:hover {
                     color: $secondary-color;
@@ -46,6 +50,10 @@
                 font-size: 25px;
                 font-weight: 600;
                 transition: 0.3s ease-in-out;
+                text-shadow: -1px 1px 0 $tertiary-color,
+                    1px 1px 0 $primary-color,
+                    1px -1px 0 $primary-color,
+                    -1px -1px 0 $primary-color;
 
                 &:hover {
                     color: $tertiary-color;
