--- a/src/index.scss
+++ b/src/index.scss
@@ -8,3 +8,4 @@
 @import './components/styles/Commande.scss';
 @import './components/styles/option.scss';
 @import "./components/footer/footer.scss";
+@import "./components/styles/Order.scss";
